--- a/universityou/package.json
+++ b/universityou/package.json
@@ -9,7 +9,9 @@
     "sails-disk": "~0.9.0",
     "ejs": "0.8.4",
     "optimist": "0.3.4",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "bcrypt": "~0.7.7",
+    "sails-mongo": "~0.9.7"
   },
   "scripts": {
     "start": "node app.js",
