--- a/universityou/bower.json
+++ b/universityou/bower.json
@@ -18,6 +18,7 @@
     "bootstrap": "~3.1.1",
     "angular": "~1.2.15",
     "angular-route": "~1.2.15",
-    "angular-animate": "~1.2.15"
+    "angular-animate": "~1.2.15",
+    "lodash": "~2.4.1"
   }
 }
